[metadata]
name = docker-pid
version = attr: docker_pid.__version__
url = https://github.com/masatanish/docker-pid
author = Masata Nishida
author_email = masatanish@gmail.com
license = MIT
license_file = LICENSE.txt
description = docker-pid: Listing process IDs in docker containers.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    docker\

[options]
zip_safe = False
packages = find:
install_requires =
    docker
    click
    tabulate

[options.entry_points]
console_scripts =
    docker-pid = docker_pid.cli:main

